ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    foo: barfeasd
  name: demo-app
spec:
  ingressClassName: nginx
  rules:
  - host: 127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-app-ui
            port:
              number: 80
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-app-api-server
            port:
              number: 80
